# collect

./: .gitignore  a_dd.csv  a_dd_count.csv  b_dd.csv  b_dd_count.csv  collect.py  ec.csv  ec_count.csv  ed_m.csv  ed_m_count.csv  ed_t.csv  ed_t_count.csv  edm.json  edm_color_graph.txt  edm_mono_graph.txt  edt.json  edt_color_graph.txt  edt_mono_graph.txt  format.py  fup.csv  fup.json  fup_color_graph.txt  fup_count.csv  fup_graph.txt  fup_mono_graph.txt  grade.py  graph_a_dd.txt  graph_b_dd.txt  graph_ec.txt  graph_ed_m.txt  graph_ed_t.txt  graph_fup.txt  last_update.txt  pull_all.py  pyproject.toml  reclone.sh  rename_folders.py  teste.csv  todo.md  update.sh  (+1 more)
cache/edm/: edm_collected.json  edm_grade_full.csv  edm_grade_quests.csv  edm_grade_tasks.csv  edm_graph_color.txt  edm_graph_mono.txt
cache/edt/: edt_collected.json  edt_grade_full.csv  edt_grade_quests.csv  edt_grade_tasks.csv  edt_graph_color.txt  edt_graph_mono.txt
cache/fup/: fup_collected.json  fup_grade_full.csv  fup_grade_quests.csv  fup_grade_tasks.csv  fup_graph_color.txt  fup_graph_mono.txt
reference/ed/: Readme.md
reference/fup/: Readme.md
remocao/: filtrado.txt  filtrar.sh  listar.sh  remover.sh
src/turmas/: class_task.py  collect.py  collected_data.py  format.py  grade.py  join.py  leoa.py  paths.py  pull.py  student_repo.py  text.py  (+1 more)
tasks/: edm.json  edm_collected.json  edm_graph_color.txt  edm_graph_mono.txt  edt.json  edt_collected.json  edt_graph_color.txt  edt_graph_mono.txt  fup.json  fup_collected.json  fup_graph.txt  fup_graph_color.txt  fup_graph_mono.txt  fup_user_text_map.json
(+4 files in other folders)
