[build-system]
requires = ["setuptools", "hatchling"]

[project]
name = "turmas"
version = "4.6.1"
description = "Add your description here"
authors = [
    { name = "David", email = "sena.ufc@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
pull = "turmas.pull:main"
collect = "turmas.collect:main"